--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mejia-1MT.github.io/create-crochet",
+  "homepage": "http://mejia-1MT.github.io",
   "name": "create-crochet",
   "version": "0.1.0",
   "private": true,
